eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
        - name: simple-bank-api
          image: 771571581229.dkr.ecr.us-west-1.amazonaws.com/simplebank:4913a9029f8d5182d379a197dfe5f49e76d24454
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
